Add defensive air-to-air attribute.